# GoIT_h10_django

./: README.md  env  manage.py  pyproject.toml
GoIT_h10_django/: manage.py
GoIT_h10_django/GoIT_h10_django/: asgi.py  settings.py  urls.py  wsgi.py
goit_h10_django/: asgi.py  settings.py  urls.py  wsgi.py
quotes_app/: data_scraper.py  forms.py  models.py  urls.py  views.py
quotes_app/migrations/: 0001_initial.py  0002_alter_author_born_date_alter_author_born_location_and_more.py
quotes_app/templates/quotes_app/: about.html  author.html  base.html  index.html  new_author.html  new_quote.html  new_tag.html  quote.html  search_tag.html  tag.html  tag_quotes.html
quotes_app/templatetags/: extract_tags.py
users/: forms.py  urls.py  views.py
users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
