[tool.poetry]
name = "goit-h10-django"
version = "0.1.0"
description = ""
authors = ["Paweł Szumański <pawel.szumanski@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
scrapy = "^2.11.1"
django-bootstrap5 = "^23.4"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
